# beamhardening

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
data/: setup.cfg
src/beamhardening/: beamhardening.py  material.py  setup.cfg
src/beamhardening.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_beamhardening.py  test_material.py  test_source_calc.py  try_correction.py
