[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "beamhardening"
version = "0.0.2"
description = "Package to correct BM beam hardening"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
where = ["src"]
